--- a/src/test/resources/dataframe2html2D.html
+++ b/src/test/resources/dataframe2html2D.html
@@ -1,4 +1,9 @@
+<!DOCTYPE html>
 <html>
+<head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <style>p.red { color: red; } p.more { color: red; font-weight: bold; }</style>
+</head>
 <body>
 <h3>Users</h3>
 <table>
@@ -18,7 +23,7 @@
     <tr><th>hobby</th><td>no</td><td>no</td></tr>
     <tr><th>picture</th>
         <td><img src="https://raw.githubusercontent.com/fucusy/dataframe2html/41a1baae2dec4d8a815ceceece77d61213d4b1c1/src/test/resources/rose.png"/></td>
-        <td><img src="https://raw.githubusercontent.com/fucusy/dataframe2html/41a1baae2dec4d8a815ceceece77d61213d4b1c1/src/test/resources/plum_blossom.png"/></td>
+        <td><img src="https://raw.githubusercontent.com/fucusy/dataframe2html/41a1baae2dec4d8a815ceceece77d61213d4b1c1/src/test/resources/plum_blossom_big.png"/></td>
     </tr>
     </tbody>
 </table>
