--- a/src/test/resources/dataframe2html2D.html
+++ b/src/test/resources/dataframe2html2D.html
@@ -1,9 +1,4 @@
-<!DOCTYPE html>
 <html>
-<head>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <style>p.red { color: red; } p.more { color: red; font-weight: bold; }</style>
-</head>
 <body>
 <h3>Users</h3>
 <table>
@@ -11,8 +6,8 @@
     <tr><th>name</th><td>bob</td><td>amy</td></tr>
     <tr><th>hobby</th><td>dance</td><td>swimming</td></tr>
     <tr><th>picture</th>
-        <td><img src="https://raw.githubusercontent.com/fucusy/dataframe2html/57c8b41dfc7368ad7d371c0a94614412abfb1de6/src/test/resources/bob.png"/></td>
-        <td><img src="https://raw.githubusercontent.com/fucusy/dataframe2html/57c8b41dfc7368ad7d371c0a94614412abfb1de6/src/test/resources/amy.png"/></td>
+        <td><img src="https://raw.githubusercontent.com/fucusy/dataframe2html/57c8b41dfc7368ad7d371c0a94614412abfb1de6/src/test/resources/bob.png" height="250" width="250"/></td>
+        <td><img src="https://raw.githubusercontent.com/fucusy/dataframe2html/57c8b41dfc7368ad7d371c0a94614412abfb1de6/src/test/resources/amy.png" height="250" width="250"/></td>
     </tr>
     </tbody>
 </table>
@@ -22,8 +17,8 @@
     <tr><th>name</th><td>rose</td><td>plum blossom</td></tr>
     <tr><th>hobby</th><td>no</td><td>no</td></tr>
     <tr><th>picture</th>
-        <td><img src="https://raw.githubusercontent.com/fucusy/dataframe2html/41a1baae2dec4d8a815ceceece77d61213d4b1c1/src/test/resources/rose.png"/></td>
-        <td><img src="https://raw.githubusercontent.com/fucusy/dataframe2html/41a1baae2dec4d8a815ceceece77d61213d4b1c1/src/test/resources/plum_blossom_big.png"/></td>
+        <td><img src="https://raw.githubusercontent.com/fucusy/dataframe2html/41a1baae2dec4d8a815ceceece77d61213d4b1c1/src/test/resources/rose.png" height="250" width="250"/></td>
+        <td><img src="https://raw.githubusercontent.com/fucusy/dataframe2html/a91ba8594a5eccc5a78d953e996169b7a0cc0935/src/test/resources/plum_blossom_big.png" height="250" width="250"/></td>
     </tr>
     </tbody>
 </table>
