--- a/src/test/resources/dataframe2html2D_no_title.html
+++ b/src/test/resources/dataframe2html2D_no_title.html
@@ -6,8 +6,8 @@
     <tr><th>name</th><td>bob</td><td>amy</td></tr>
     <tr><th>hobby</th><td>dance</td><td>swimming</td></tr>
     <tr><th>picture</th>
-        <td><img src="https://raw.githubusercontent.com/fucusy/dataframe2html/57c8b41dfc7368ad7d371c0a94614412abfb1de6/src/test/resources/bob.png"/></td>
-        <td><img src="https://raw.githubusercontent.com/fucusy/dataframe2html/57c8b41dfc7368ad7d371c0a94614412abfb1de6/src/test/resources/amy.png"/></td>
+        <td><img src="https://raw.githubusercontent.com/fucusy/dataframe2html/57c8b41dfc7368ad7d371c0a94614412abfb1de6/src/test/resources/bob.png" height="250" width="250"/></td>
+        <td><img src="https://raw.githubusercontent.com/fucusy/dataframe2html/57c8b41dfc7368ad7d371c0a94614412abfb1de6/src/test/resources/amy.png" height="250" width="250"/></td>
     </tr>
     </tbody>
 </table>
@@ -17,8 +17,8 @@
     <tr><th>name</th><td>rose</td><td>plum blossom</td></tr>
     <tr><th>hobby</th><td>no</td><td>no</td></tr>
     <tr><th>picture</th>
-        <td><img src="https://raw.githubusercontent.com/fucusy/dataframe2html/41a1baae2dec4d8a815ceceece77d61213d4b1c1/src/test/resources/rose.png"/></td>
-        <td><img src="https://raw.githubusercontent.com/fucusy/dataframe2html/41a1baae2dec4d8a815ceceece77d61213d4b1c1/src/test/resources/plum_blossom.png"/></td>
+        <td><img src="https://raw.githubusercontent.com/fucusy/dataframe2html/41a1baae2dec4d8a815ceceece77d61213d4b1c1/src/test/resources/rose.png" height="250" width="250"/></td>
+        <td><img src="https://raw.githubusercontent.com/fucusy/dataframe2html/41a1baae2dec4d8a815ceceece77d61213d4b1c1/src/test/resources/plum_blossom.png" height="250" width="250"/></td>
     </tr>
     </tbody>
 </table>
