simpilify the test, add css styte to html

--- a/src/test/resources/dataframe2html2D.html
+++ b/src/test/resources/dataframe2html2D.html
@@ -1,24 +1,27 @@
 <html>
+<head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+</head>
 <body>
-<h3>Users</h3>
-<table>
+<div style="background-color:lightblue"><h3>Users</h3></div>
+<table class="table table-bottom table-hover table-sm">
     <tbody>
     <tr><th>name</th><td>bob</td><td>amy</td></tr>
     <tr><th>hobby</th><td>dance</td><td>swimming</td></tr>
     <tr><th>picture</th>
-        <td><img src="https://raw.githubusercontent.com/fucusy/dataframe2html/57c8b41dfc7368ad7d371c0a94614412abfb1de6/src/test/resources/bob.png" height="250" width="250"/></td>
-        <td><img src="https://raw.githubusercontent.com/fucusy/dataframe2html/57c8b41dfc7368ad7d371c0a94614412abfb1de6/src/test/resources/amy.png" height="250" width="250"/></td>
+        <td><img src="https://raw.githubusercontent.com/fucusy/dataframe2html/57c8b41dfc7368ad7d371c0a94614412abfb1de6/src/test/resources/bob.png" width="100"/></td>
+        <td><img src="https://raw.githubusercontent.com/fucusy/dataframe2html/57c8b41dfc7368ad7d371c0a94614412abfb1de6/src/test/resources/amy.png" width="100"/></td>
     </tr>
     </tbody>
 </table>
-<h3>Flowers</h3>
-<table>
+<div style="background-color:lightblue"><h3>Flowers</h3></div>
+<table class="table table-bottom table-hover table-sm">
     <tbody>
     <tr><th>name</th><td>rose</td><td>plum blossom</td></tr>
     <tr><th>hobby</th><td>no</td><td>no</td></tr>
     <tr><th>picture</th>
-        <td><img src="https://raw.githubusercontent.com/fucusy/dataframe2html/41a1baae2dec4d8a815ceceece77d61213d4b1c1/src/test/resources/rose.png" height="250" width="250"/></td>
-        <td><img src="https://raw.githubusercontent.com/fucusy/dataframe2html/41a1baae2dec4d8a815ceceece77d61213d4b1c1/src/test/resources/plum_blossom.png" height="250" width="250"/></td>
+        <td><img src="https://raw.githubusercontent.com/fucusy/dataframe2html/41a1baae2dec4d8a815ceceece77d61213d4b1c1/src/test/resources/rose.png" width="100"/></td>
+        <td><img src="https://raw.githubusercontent.com/fucusy/dataframe2html/41a1baae2dec4d8a815ceceece77d61213d4b1c1/src/test/resources/plum_blossom.png" width="100"/></td>
     </tr>
     </tbody>
 </table>
