--- a/src/test/resources/dataframe2html2D.html
+++ b/src/test/resources/dataframe2html2D.html
@@ -8,6 +8,7 @@
     <tbody>
     <tr><th>name</th><td>bob</td><td>amy</td></tr>
     <tr><th>hobby</th><td>dance</td><td>swimming</td></tr>
+    <tr><th>col_order</th><td>1</td><td>2</td></tr>
     <tr><th>picture</th>
         <td><img src="https://raw.githubusercontent.com/fucusy/dataframe2html/57c8b41dfc7368ad7d371c0a94614412abfb1de6/src/test/resources/bob.png" width="100"/></td>
         <td><img src="https://raw.githubusercontent.com/fucusy/dataframe2html/57c8b41dfc7368ad7d371c0a94614412abfb1de6/src/test/resources/amy.png" width="100"/></td>
@@ -19,6 +20,7 @@
     <tbody>
     <tr><th>name</th><td>rose</td><td>plum blossom</td></tr>
     <tr><th>hobby</th><td>no</td><td>no</td></tr>
+    <tr><th>col_order</th><td>1</td><td>2</td></tr>
     <tr><th>picture</th>
         <td><img src="https://raw.githubusercontent.com/fucusy/dataframe2html/41a1baae2dec4d8a815ceceece77d61213d4b1c1/src/test/resources/rose.png" width="100"/></td>
         <td><img src="https://raw.githubusercontent.com/fucusy/dataframe2html/41a1baae2dec4d8a815ceceece77d61213d4b1c1/src/test/resources/plum_blossom.png" width="100"/></td>
